--- a/network/config.json
+++ b/network/config.json
@@ -4,7 +4,7 @@
   "data": "data.json",
   "logo": {
     "text": "Adamrmor",
-    "file": "http://www.aucklandmuseum.com/client/img/aucklandmuseum/am_logo_fb.png",
+    "file": "",
     "link": "https://www.google.co.nz/url?sa\u003dt\u0026rct\u003dj\u0026q\u003d\u0026esrc\u003ds\u0026source\u003dweb\u0026cd\u003d1\u0026cad\u003drja\u0026uact\u003d8\u0026ved\u003d0ahUKEwjFycXtt6PNAhXGNJQKHbVLASAQFgggMAA\u0026url\u003dhttps%3A%2F%2Fnatlib.govt.nz%2Fiwi-hapu-names\u0026usg\u003dAFQjCNHK1iRcKYzGt0DIQ7tV6LjZkzndqg\u0026sig2\u003dFnOG0DtqF4dO6OAEH_vRtg\u0026bvm\u003dbv.124272578,d.dGo"
   },
   "text": {
